# dep-hallucinator

./: .dockerignore  .gitignore  BRANCHING_STRATEGY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE_NOTES.md  STRUCTURED_LOGGING.md  branching_strategy.md  contributing.md  deployment.md  docker-compose.yml  documentation.md  env.example  pyproject.toml  security.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: branch-protection.yml  ci.yml  ci.yml.disabled
src/dep_hallucinator/: cache_manager.py  cli_config.py  completion.py  credential_security_guide.py  dependency.py  dependency_resolver.py  error_handling.py  forensic_manager.py  forensic_reporting.py  heuristics.py  main.py  ml_engine.py  package_lists.py  parsers.py  performance_optimizer.py  registry_clients.py  reporting.py  sbom_generator.py  scanner.py  signature_verification.py  structured_logging.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_cli.py  test_core.py  test_integration.py
